--- a/view/community/storyWrite.html
+++ b/view/community/storyWrite.html
@@ -239,7 +239,7 @@
 
     <div class="container">
 
-        <div id="type_menu">
+        <div id="type_menu" style="margin-left: 142px;">
             <div class="row m-5">
         
                 <div class="col-md-2 pop_wrap">
