--- a/view/login/login.html
+++ b/view/login/login.html
@@ -294,7 +294,7 @@
     
     $(document).on("click", "#kakao-btn", function(){
         $("#kakao-btn").on('click', function(){
-            alert('로긴카카오 클릭됨');
+            //alert('로긴카카오 클릭됨');
             location.href = "https://kauth.kakao.com/oauth/authorize?client_id=e55eb67c927feac9076da403729a23f8&redirect_uri=http://192.168.0.231:8090/view/login/login.html&response_type=code"
         })
     })
