--- a/view/login/regiAf.html
+++ b/view/login/regiAf.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
 
     <style>
         .container {
@@ -31,18 +32,19 @@
                 <h1 style="margin: 33px;font-size: 45px;margin-left: 46px;"><strong>회원가입 완료</strong></h1>
             </div>
         </div>
-        <div class="row" style="font-size: 30px;margin: 0 auto;text-align: center;display: flex;justify-content: center;">
-            <h1 >완자 회원가입을 축하드립니다.</h1>
+        <div class="row" style="margin: 0 auto;text-align: center;display: flex;justify-content: center;">
+            <h1 style="font-size: 33px;" >완자 회원가입을 축하드립니다.</h1>
         </div>
+        <br>
         <div class="row" style="text-align: center;flex-direction: column;">
-            <h1 style="font-size: 20px;/* margin: 25px; *//* margin-left: 90px; *//* margin-bottom: 8px; */">신규회원 40000포인트가 지급되었으며, </h1>
-            <h1 style="font-size: 20px;/* margin: 25px; *//* margin-left: 90px; *//* margin-bottom: 8px; */">마이페이지에서 확인하실 수 있습니다.</h1>
+            <h1 style="font-size: 18px;">신규회원 <span style="color: rgb(244,116,76);">40,000P</span>가 지급되었으며, </h1>
+            <h1 style="font-size: 18px;">마이페이지에서 확인하실 수 있습니다.</h1>
         </div>
         <div class="row" style="text-align: center;">
-            <div class="col" style="text-align: center;"><img src="../../assets/img/190124_tour_coupon_10000.png" style="text-align: center;margin-left: -20px;margin-top: 10px;" width="600px"></div>
+            <div class="col" style="text-align: center;"><img src="../../assets/img/190124_tour_coupon_10000.png" style="text-align: center;margin-left: 0px;margin-top: 10px;" width="550px"></div>
         </div>
         <div class="row" style="text-align: center;">
-            <div class="col" style="text-align: center;"><button id="goHome" class="btn btn-lg" type="button" style="border-color: rgb(244,116,76);color: rgb(244,116,76);font-family: 'Noto Sans KR', sans-serif;font-size: 30px;padding-top: 4px;margin-top: 5px;">홈으로 가기</button></div>
+            <div class="col" style="text-align: center;"><button id="goHome" class="btn btn-lg" type="button" style="border: 1px solid rgb(244,116,76); color: rgb(244,116,76);font-weight: 800; font-family: 'Noto Sans KR', sans-serif;font-size: 20px;padding-top: 4px;margin-top: 5px;">홈으로 가기</button></div>
         </div>
     </div>
     <footer include-html="../commons/footer.html"></footer>
