--- a/view/admin/community-storyTag.html
+++ b/view/admin/community-storyTag.html
@@ -784,7 +784,7 @@ function getStoryTagList(pageNum) {
                         +            '<div class="col d-flex justify-content-center align-items-center"><p style="font-size: 18px;"><b>1.</b> 이미지를 클릭하여 태그를 넣을 좌표를 구하세요.</p></div>'
                         +        '</div>'
                         +        '<div class="row" style="height: 84px;">'
-                        +            '<div class="col">가로축 : <input type="text" id="loc_x_'+(i+1)+'" style="width: 70px;">&ensp;&ensp; 세로축 : <input type="text" id="loc_y_'+(i+1)+'" style="width: 70px;"></div>'
+                        +            '<div class="col">가로축 : <input type="text" id="loc_x_'+(i+1)+'" style="width: 70px;" readonly>&ensp;&ensp; 세로축 : <input type="text" id="loc_y_'+(i+1)+'" style="width: 70px;" readonly></div>'
                         +        '</div>'
                         +        '<div class="row" style="height: 50px; margin-top:20px 0px;">'
                         +            '<div class="col d-flex justify-content-center align-items-center"><p style="font-size: 18px;"><b>2.</b> 등록할 상품을 선택하세요.</p></div>'
