--- a/view/admin/community-userManage.html
+++ b/view/admin/community-userManage.html
@@ -697,7 +697,7 @@ function getUserManageList(pageNum) {
             if (Object.keys(list).length == 0) {
 
                 app += '<div style="width: 320px; margin-right: 50px;">'
-                    + '<h3 style="font-size: 15px; margin-top: 10px;"><b>게시글이 없습니다.</b></h3>'
+                    + '<h3 style="font-size: 15px; margin-top: 10px;"><b>유저 정보가 없습니다.</b></h3>'
                     + "</div>";
 
                 $("#userManageList").append(app);
